# learning-langchain

./: .gitignore  main.py  pyproject.toml
1_chat_models/: 1_chat_model_basic.py  2_chat_model_basic_conversation.py  3_chat_model_alternatives.py  4_chat_model_conversation_with_user.py
2_prompt_templates/: 1_prompt_template_basic.py
3_chains/: 1_chain_basics.py  2_chains_under_the_hood.py  3_chains_extended.py  4_chains_parallel.py  5_chains_branching.py
